#update - name in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "treihadwyl-basic",
+  "name": "treihadwyl-base",
   "version": "0.1.1",
   "description": "Treihadwyl Base Package Scaffold",
   "main": "main.js",
